--- a/public/.htaccess
+++ b/public/.htaccess
@@ -26,3 +26,7 @@
     RewriteCond %{REQUEST_URI} !^public
     RewriteRule ^(.*)$ public/$1 [L]
     </IfModule>
+
+    <IfModule dir_module>
+        DirectoryIndex index.html index.php
+    </IfModule>
