--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
+        "livewire/livewire": "2.3",
         "unicodeveloper/laravel-paystack": "^1.0"
     },
     "require-dev": {
