--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "kingflamez/laravelrave": "^4.2",
         "laravel/framework": "^8.12",
+        "laravel/passport": "^10.3",
+        "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "livewire/livewire": "2.3",
