--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,7 @@
     </IfModule>
 
     RewriteEngine On
+    RewriteRule ^ - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
     RewriteCond %{REQUEST_URI}::$1 ^(/.+)/(.*)::\2$
     RewriteRule ^(.*) - [E=BASE:%1]
